--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!doctype html>
 <html>
-<head></head>
+<head>
+  
+  <style>
+    body{
+      background-color:black;
+      color: white;
+      font-family: sans-serif;
+    }
+  </style>
+  
+</head>
 <body>
 <h1>Rima Gerhard</h1>
-Portfolio
+<h2>Portfolio</h2>
 </body>
 </html>
