--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body{
       background-color:black;
-      color: white;
+      color: #E80C7A;
       font-family: sans-serif;
     }
   </style>
