--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       color: #E80C7A;
       font-family: sans-serif;
     }
+    
+    h2{
+      color: #1FCCB2;
+    }
+    
   </style>
   
 </head>
