--- a/about.html
+++ b/about.html
@@ -6,5 +6,9 @@
 <body>
 
 <h1>About Rima</h1>
+<p>I am a Web Developer based in Miami.</p>
+<div> I enjoy riding my bike and traveling. </div>
+
+
 </body>
 </html>
