--- a/about.html
+++ b/about.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 <title> About Rima </title>
+<style>
+h1{
+  font-size: 72px;
+  font-family: Georgia;
+  margin-top: 50px;
+}
+</style>
 </head>
 <body>
 
