--- a/about.html
+++ b/about.html
@@ -17,6 +17,6 @@ h1{
 <p>I am a Web Developer based in Miami.</p>
 <div> I enjoy riding my bike and traveling. </div>
 
-
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/03-twitter-128.png">
 </body>
 </html>
