--- a/about.html
+++ b/about.html
@@ -18,5 +18,8 @@ h1{
 <div> I enjoy riding my bike and traveling. </div>
 
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png">
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/11-linkedin-32.png">
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/78-instagram-32.png">
+
 </body>
 </html>
