--- a/about.html
+++ b/about.html
@@ -17,8 +17,12 @@ h1{
 <p>I am a Web Developer based in Miami.</p>
 <div> I enjoy riding my bike and traveling. </div>
 
+<a href="http://www.twitter.com/rima_gerhard">
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png">
+</a>
+<a href="http://www.linkedin.com/in/rimagerhard">
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/11-linkedin-32.png">
+</a>
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/78-instagram-32.png">
 
 </body>
