--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   
 </head>
 <body>
+<img src="https://farm9.staticflickr.com/8650/15762352813_d5ec75a05f_n.jpg">
 <h1>Rima Gerhard</h1>
 <h2>Portfolio</h2>
 </body>
