--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  
+  <link href="style.css" rel="stylesheet"> 
   <style>
     body{
       background-color:black;
