--- a/about.html
+++ b/about.html
@@ -2,13 +2,7 @@
 <html>
 <head>
 <title> About Rima </title>
-<style>
-h1{
-  font-size: 72px;
-  font-family: Georgia;
-  margin-top: 50px;
-}
-</style>
+<link href="style.css" rel="stylesheet"> 
 </head>
 <body>
 
