--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <link href="style.css" rel="stylesheet"> 
 </head>
 <body>
+
+<nav>
+<a href="index.html"> Home </a> | <a href="about.html"> About </a>
+</nav>
+
 <img src="https://farm9.staticflickr.com/8650/15762352813_d5ec75a05f_n.jpg">
 <h1>Rima Gerhard</h1>
 <h2>Portfolio</h2>
