--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <nav>
-<a href="index.html"> Home </a> | <a href="about.html"> About </a>
+<a href="index.html"> Home </a>  <a href="about.html"> About </a>
 </nav>
 
 <img src="https://farm9.staticflickr.com/8650/15762352813_d5ec75a05f_n.jpg">
