--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <body>
 
 <nav>
-<a href="index.html"> Home </a> | <a href="about.html"> About </a>
+<a href="index.html"> Home </a> <a href="about.html"> About </a>
 </nav>
 
 <h1>About Rima</h1>
