--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <nav>
 <a href="index.html"> Home </a>  <a href="about.html"> About </a>
 </nav>
-
+<header>
 <img src="https://farm9.staticflickr.com/8650/15762352813_d5ec75a05f_n.jpg">
 <h1>Rima Gerhard</h1>
 <h2>Portfolio</h2>
+</header>
 </body>
 </html>
