--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 <link href="style.css" rel="stylesheet"> 
+<style>
+p {
+  background-color: yellow;
+  font-family: Impact, Haettenschweiler, “Arial Narrow Bold”, sans-serif; 
+}
+</style>
 </head>
 <body>
 
@@ -17,5 +23,11 @@
 <section>
   <button>See my work.</button>
 </section>
+<section>
+<p>Web Design.</p>
+<p>Web Development.</p>
+<p>Mobile Apps.</p>
+</section>
+
 </body>
 </html>
