--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ p {
 <section>
   <button>See my work.</button>
 </section>
-<section>
+<section id="features">
 <p>Web Design.</p>
 <p>Web Development.</p>
 <p>Mobile Apps.</p>
