--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <button>See my work.</button>
 </section>
 <section id="features">
-<p>Web Design.</p>
+<p>
+<i class="fa fa-cogs"></i>
+Web Design.
+</p>
 <p>Web Development.</p>
 <p>Mobile Apps.</p>
 </section>
