--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
 <br>
 Web Design.
 </p>
-<p>Web Development.</p>
-<p>Mobile Apps.</p>
+<p><i class="fa fa-laptop"></i>
+<br>
+Web Development.</p>
+<p>
+<i class="fa fa-mobile"></i>
+<br>
+Mobile Apps.</p>
 </section>
 
 </body>
