--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@ Web Development.</p>
 <br>
 Mobile Apps.</p>
 </section>
-
+<footer>
+<a href="http://www.twitter.com/rima_gerhard">
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png">
+</a>
+<a href="http://www.linkedin.com/in/rimagerhard">
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/11-linkedin-32.png">
+</a>
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/78-instagram-32.png">
+</footer>
+  
 </body>
 </html>
