--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
 
 <nav>
 <a href="index.html"> Home </a>  <a href="about.html"> About </a>
+<a href="portfolio.html" class="menu-selected"> Portfolio </a>
 </nav>
 <header>
 <img src="https://farm9.staticflickr.com/8650/15762352813_d5ec75a05f_n.jpg" width="100">
