--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav>
-<a href="index.html"> Home </a>  <a href="about.html"> About </a>
+<a href="index.html" class="menu-selected"> Home </a>  <a href="about.html"> About </a> <a href="portfolio.html">Portfolio</a>
 </nav>
 <header>
 <img src="https://farm9.staticflickr.com/8650/15762352813_d5ec75a05f_n.jpg" width="100">
