--- a/portfolio.html
+++ b/portfolio.html
@@ -17,23 +17,11 @@
 <h1>Rima Gerhard</h1>
 <h2>Portfolio</h2>
 </header>
-<section>
-  <button>See my work.</button>
-</section>
-<section id="features">
-<p>
-<i class="fa fa-cogs"></i>
-<br>
-Web Design.
-</p>
-<p><i class="fa fa-laptop"></i>
-<br>
-Web Development.</p>
-<p>
-<i class="fa fa-mobile"></i>
-<br>
-Mobile Apps.</p>
-</section>
+
+<main>
+<img src="https://farm9.staticflickr.com/8649/16562953445_71c5f88b4b_o.jpg" alt="Portfolio Piece 1">
+</main>
+
 <footer>
 <a href="http://www.twitter.com/rima_gerhard">
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png">
