--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,10 @@
 </header>
 
 <main>
+
+<table>
+</table>
+
 <img src="https://farm9.staticflickr.com/8649/16562953445_71c5f88b4b_o.jpg" alt="Portfolio Piece 1">
 <img src="https://farm9.staticflickr.com/8576/16375584220_524bdd25c8_o.png" alt="Portfolio Piece 2">
 <img src="https://farm9.staticflickr.com/8649/16562953445_71c5f88b4b_o.jpg" alt="Portfolio Piece 1">
