--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,10 @@
   <td> <img src="https://farm9.staticflickr.com/8649/16562953445_71c5f88b4b_o.jpg" alt="Portfolio Piece 1"> </td>
   <td><img src="https://farm9.staticflickr.com/8576/16375584220_524bdd25c8_o.png" alt="Portfolio Piece 2"></td>
   <td><img src="https://farm9.staticflickr.com/8649/16562953445_71c5f88b4b_o.jpg" alt="Portfolio Piece 1"></td>
+</tr>
 <tr>
+<td><img src="https://farm9.staticflickr.com/8576/16375584220_524bdd25c8_o.png" alt="Portfolio Piece 2"></td>
+</tr>
 </table>
 
 
