--- a/gradient.html
+++ b/gradient.html
@@ -2,21 +2,20 @@
 <html>
 <head>
 <style>
+html {
+background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'), -moz-linear-gradient(left, #b687bf 0%, #70c9a8 49%, #1092a0 100%); /* FF3.6+ */
+background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'), -webkit-gradient(linear, left top, right top, color-stop(0%,#b687bf), color-stop(49%,#70c9a8), color-stop(100%,#1092a0)); /* Chrome,Safari4+ */
+background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'), -webkit-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%); /* Chrome10+,Safari5.1+ */
+background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'), -o-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%); /* Opera 11.10+ */
+background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'), -ms-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%); /* IE10+ */
+background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'), linear-gradient(to right, #b687bf 0%,#70c9a8 49%,#1092a0 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b687bf', endColorstr='#1092a0',GradientType=1 ); /* IE6-9 */
+}
+
 h1,
 h2{
  text-align:center; 
 }
-
-html {
-background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg') center center no-repeat, -moz-linear-gradient(left, #b687bf 0%, #70c9a8 49%, #1092a0 100%); /* FF3.6+ */
-background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg') center center no-repeat,-webkit-gradient(linear, left top, right top, color-stop(0%,#b687bf), color-stop(49%,#70c9a8), color-stop(100%,#1092a0)); /* Chrome,Safari4+ */
-background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg') center center no-repeat,-webkit-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%); /* Chrome10+,Safari5.1+ */
-background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg') center center no-repeat,-o-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%); /* Opera 11.10+ */
-background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg') center center no-repeat,-ms-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%); /* IE10+ */
-background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg') center center no-repeat,linear-gradient(to right, #b687bf 0%,#70c9a8 49%,#1092a0 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b687bf', endColorstr='#1092a0',GradientType=1 ); /* IE6-9 */
-}
-
 </style>
 </head>
 <body>
