--- a/gradient.html
+++ b/gradient.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-html {
+section {
 background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'), -moz-linear-gradient(left, #b687bf 0%, #70c9a8 49%, #1092a0 100%); /* FF3.6+ */
 background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'), -webkit-gradient(linear, left top, right top, color-stop(0%,#b687bf), color-stop(49%,#70c9a8), color-stop(100%,#1092a0)); /* Chrome,Safari4+ */
 background-image: url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'), -webkit-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%); /* Chrome10+,Safari5.1+ */
