--- a/gradient.html
+++ b/gradient.html
@@ -3,12 +3,12 @@
 <head>
 <style>
 section {
-background-image: -moz-linear-gradient(left, #b687bf 0%, #70c9a8 49%, #1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* FF3.6+ */
-background-image: -webkit-gradient(linear, left top, right top, color-stop(0%,#b687bf), color-stop(49%,#70c9a8), color-stop(100%,#1092a0)), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* Chrome,Safari4+ */
-background-image: -webkit-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* Chrome10+,Safari5.1+ */
-background-image: -o-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* Opera 11.10+ */
-background-image: -ms-linear-gradient(left, #b687bf 0%,#70c9a8 49%,#1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* IE10+ */
-background-image: linear-gradient(to right, #b687bf 0%,#70c9a8 49%,#1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* W3C */
+background-image: -moz-linear-gradient(left, rgba(182, 135, 191, 0.8) 0%, #70c9a8 49%, #1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* FF3.6+ */
+background-image: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(182, 135, 191, 0.8)), color-stop(49%,#70c9a8), color-stop(100%,#1092a0)), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* Chrome,Safari4+ */
+background-image: -webkit-linear-gradient(left, rgba(182, 135, 191, 0.8) 0%,#70c9a8 49%,#1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* Chrome10+,Safari5.1+ */
+background-image: -o-linear-gradient(left, rgba(182, 135, 191, 0.8) 0%,#70c9a8 49%,#1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* Opera 11.10+ */
+background-image: -ms-linear-gradient(left, rgba(182, 135, 191, 0.8) 0%,#70c9a8 49%,#1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* IE10+ */
+background-image: linear-gradient(to right, rgba(182, 135, 191, 0.8) 0%,#70c9a8 49%,#1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b687bf', endColorstr='#1092a0',GradientType=1 ); /* IE6-9 */
 }
 
