--- a/gradient.html
+++ b/gradient.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-section {
+html {
 background-image: -moz-linear-gradient(left, rgba(182, 135, 191, 0.8) 0%, #70c9a8 49%, #1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* FF3.6+ */
 background-image: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(182, 135, 191, 0.8)), color-stop(49%,#70c9a8), color-stop(100%,#1092a0)), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* Chrome,Safari4+ */
 background-image: -webkit-linear-gradient(left, rgba(182, 135, 191, 0.8) 0%,#70c9a8 49%,#1092a0 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* Chrome10+,Safari5.1+ */
