--- a/gradient.html
+++ b/gradient.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 html {
-background-image: linear-gradient(to right, rgba(182, 135, 191, 0.8) 0%,#70c9a8 49%,rgba(16, 146, 160, 0.8) 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* W3C */
+background-image: linear-gradient(to right, rgba(182, 135, 191, 0.8) 0%,rgba(112, 201, 168, 0.8) 49%,rgba(16, 146, 160, 0.8) 100%), url('http://payload175.cargocollective.com/1/8/282864/5815628/DSC_0631_1_o.jpg'); /* W3C */
 }
 
 h1,
