--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h2>Portfolio</h2>
 </header>
 <section>
-  <a href="portfolio.html">See my work.</a>
+  <a class="button" href="portfolio.html">See my work.</a>
 </section>
 <section id="features">
 <p>
