--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Mobile Apps.</p>
 
 <iframe src="http://amercado07.github.io/Portfolio/"></iframe>
 
-</section
+</section>
 
 <footer>
 <a href="http://www.twitter.com/rima_gerhard">
