--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Mobile Apps.</p>
 
 <section>
 
-<iframe src="http://amercado07.github.io/Portfolio/"></iframe>
+<iframe src="http://amercado07.github.io/Portfolio/" width="100%" height="400"></iframe>
 
 </section>
 
