--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ Mobile Apps.</p>
 </section>
 
 <footer>
+
+<iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fmiuweb&amp;width&amp;height=290&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=false&amp;show_border=true&amp;appId=465970720158684" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:290px;" allowTransparency="true"></iframe>
+
 <a href="http://www.twitter.com/rima_gerhard">
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png">
 </a>
