--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,7 @@
 </a>
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/78-instagram-32.png">
 </footer>
-  
+ 
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script> 
 </body>
 </html>
