--- a/portfolio.html
+++ b/portfolio.html
@@ -45,5 +45,6 @@
 </footer>
  
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script> 
+<script src="js/lightbox.min.js"></script>
 </body>
 </html>
