--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 
 <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="css/lightbox.css" rel="stylesheet" />
 <link href="style.css" rel="stylesheet"> 
 </head>
 <body>
