--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,9 @@
 <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="css/lightbox.css" rel="stylesheet" />
 <link href="style.css" rel="stylesheet"> 
+
+
+
 </head>
 <body>
 
@@ -16,14 +19,14 @@
 <header>
 <img src="https://farm9.staticflickr.com/8650/15762352813_d5ec75a05f_n.jpg" width="100">
 <h1>Rima Gerhard</h1>
-<h2>Portfolio</h2>
+<h2>Portfolio Pieces</h2>
 </header>
 
 <main>
 
 <table>
 <tr>
-  <td> <img src="https://farm9.staticflickr.com/8649/16562953445_71c5f88b4b_o.jpg" alt="Portfolio Piece 1"> </td>
+  <td> <a href="https://farm9.staticflickr.com/8649/16562953445_71c5f88b4b_o.jpg" data-lightbox="image-1" data-title="My caption"><img src="https://farm9.staticflickr.com/8649/16562953445_71c5f88b4b_o.jpg" alt="Portfolio Piece 1"></a> </td>
   <td><img src="https://farm9.staticflickr.com/8576/16375584220_524bdd25c8_o.png" alt="Portfolio Piece 2"></td>
   <td><img src="https://farm9.staticflickr.com/8649/16562953445_71c5f88b4b_o.jpg" alt="Portfolio Piece 1"></td>
 </tr>
@@ -45,7 +48,7 @@
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/78-instagram-32.png">
 </footer>
  
-<script src="//code.jquery.com/jquery-1.11.2.min.js"></script> 
+<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script> 
 <script src="js/lightbox.min.js"></script>
 </body>
 </html>
